# UnifiedEngine

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
cmake/: directories.cmake
example/: CMakeLists.txt  example.cpp
example/events/: CMakeLists.txt  events.cpp
examples/bounce/: CMakeLists.txt  bounce.cpp
examples/draw/: CMakeLists.txt  draw.cpp
examples/events/: events.cpp
examples/fluid/: CMakeLists.txt  fluid.cpp  fluid.frag  fluid.vert
examples/interfaces/: CMakeLists.txt  interfaces.cpp
examples/layers/: CMakeLists.txt  layers.cpp
examples/minimal/: CMakeLists.txt  minimal.cpp
examples/texture/: CMakeLists.txt  texture.cpp
include/: unified.hpp
include/unified/: defines.hpp
include/unified/application/: application.hpp  event.hpp  layer.hpp
include/unified/application/event/: cursor_move.hpp  event.hpp  key_press.hpp  mouse_press.hpp  window_close.hpp  window_focus.hpp  window_maximize.hpp  window_move.hpp  window_resize.hpp
include/unified/application/window/: window.hpp
include/unified/application/window/icons/: icons.hpp
include/unified/core/: clock.hpp  color.hpp  exceptions.hpp  int_types.hpp  size2.hpp  string.hpp  time.hpp
include/unified/core/debug/: assert.hpp
include/unified/core/input/: keyboard.hpp  mouse.hpp
include/unified/core/math/: matrix.hpp  matrix_fwd.hpp  point2.hpp  point3.hpp  point4.hpp  point_fwd.hpp  vector2.hpp  vector3.hpp  vector_fwd.hpp
include/unified/core/math/detail/: determinant.hpp  matrix_inverse.hpp  matrix_rotate.hpp
include/unified/core/runtime/: exceptions.hpp
include/unified/core/system/: sleep.hpp
include/unified/graphics/: buffer.hpp  camera.hpp  color.hpp  drawable.hpp  gpu_buffer.hpp  primitive_type.hpp  render_target.hpp  shader.hpp  texture.hpp  vars.hpp  vertex.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_fwd.hpp  view.hpp
include/unified/graphics/2d/: camera.hpp  vertex.hpp
include/unified/graphics/2d/drawable/: texture.hpp  vertex_array.hpp  vertex_list.hpp
include/unified/graphics/3d/: camera.hpp  vertex.hpp
include/unified/graphics/3d/drawable/: texture.hpp  vertex_array.hpp  vertex_list.hpp
include/unified/graphics/drawable/: array.hpp  convex_shape.hpp  vertex_array.hpp  vertex_list.hpp
include/unified/graphics/math/: transform.hpp  transform_fwd.hpp  vertex2.hpp  vertex3.hpp  vertex_fwd.hpp
include/unified/platform/: platform.hpp
include/unified/platform/linux/: linux.hpp
include/unified/platform/windows/: windows.hpp
src/application/: application.cpp  layer.cpp
src/application/event/: cursor_move.cpp  event.cpp  key_press.cpp  mouse_press.cpp  window_close.cpp  window_focus.cpp  window_maximize.cpp  window_move.cpp  window_resize.cpp
src/application/window/: window.cpp
src/application/window/icons/: icons.cpp
src/core/: clock.cpp  color.cpp  exceptions.cpp  time.cpp
src/core/debug/: assert.cpp
src/core/system/: sleep.cpp
src/core/system/windows/: sleep.cpp
src/graphics/: buffer.cpp  camera.cpp  drawable.cpp  gpu_buffer.cpp  render_target.cpp  shader.cpp  texture.cpp  vars.cpp  vertex.cpp  vertex_array.cpp  vertex_buffer.cpp  view.cpp
src/graphics/2d/: camera.cpp
src/graphics/2d/drawable/: texture.cpp  vertex_array.cpp  vertex_list.cpp  vertex_texture.vert
src/graphics/3d/: camera.cpp
src/graphics/3d/drawable/: texture.cpp  vertex_array.cpp  vertex_color.vert  vertex_list.cpp  vertex_texture.frag  vertex_texture.vert
src/graphics/drawable/: array.cpp  array.frag  convex_shape.cpp  vertex_array.cpp  vertex_array.vert  vertex_list.cpp
